<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mobileassistant.smartvision.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.mobileassistant.smartvision.ui.gallery.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.mobileassistant.smartvision.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_reading_mode"
        android:name="com.mobileassistant.smartvision.ui.reading_mode.ReadingModeFragment"
        android:label="@string/menu_item_1"
        tools:layout="@layout/fragment_reading_mode" />

    <fragment
        android:id="@+id/nav_object_detection"
        android:name="com.mobileassistant.smartvision.ui.detect_objects.ObjectDetectionFragment"
        android:label="@string/menu_item_2"
        tools:layout="@layout/fragment_object_detection" />

</navigation>