<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.gallery.SettingsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing4x"
        android:layout_marginHorizontal="@dimen/spacing2x"
        android:text="@string/initial_text_label"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing2x"
        android:layout_marginTop="@dimen/spacing4x"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/announcement_status"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/announcementStatusSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/spacing2x" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing2x"
        android:layout_marginTop="@dimen/spacing4x"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smart_cap_settings"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/smartCapCamRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/accessPointModeRadioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/access_point_mode"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/commonNetworkModeRadioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/common_network_mode"
                android:textStyle="bold" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cam_server_url_label"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/camServerUrlEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:layout_marginStart="@dimen/spacing2x"
                android:hint="@string/smart_cap_server_url_hint_text" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing2x"
        android:layout_marginTop="@dimen/spacing4x"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/object_detection_mode_settings"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/objectDetectionModeRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/detectObjectsRadioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mode_1_detect_object"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/trackObjectsRadioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mode_2_track_objects"
                android:textStyle="bold" />
        </RadioGroup>
    </LinearLayout>
</LinearLayout>