<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/spacing1x"
    app:cardCornerRadius="@dimen/spacing1x"
    app:cardElevation="@dimen/spacing1x">

    <LinearLayout
        android:id="@+id/faceLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing2x"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/spacing2x">

        <ImageView
            android:id="@+id/face_image"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:srcCompat="@drawable/face_recognition" />

        <EditText
            android:id="@+id/face_name_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:hint="@string/familiar_face_hint"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:text="Person name" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing1x"
                android:text="@string/ok_text" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing1x"
                android:text="@string/cancel_text" />
        </LinearLayout>

        <TextView
            android:id="@+id/note_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/note_msg"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            tools:visibilty="visible" />
    </LinearLayout>
</androidx.cardview.widget.CardView>