<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.FaceSettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/face_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing2x"
                android:gravity="center"
                android:text="@string/add_familiar_faces_text"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/error_face_image_view"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing2x"
                android:importantForAccessibility="no"
                android:src="@drawable/face_recognition"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/error_face_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing2x"
                android:foregroundGravity="center_vertical"
                android:gravity="center"
                android:text="@string/no_face_added_text"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="gone"
                tools:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/all_faces_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:visibility="visible" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/add_new_face_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="@dimen/spacing5x"
        android:background="@color/purple_200"
        android:importantForAccessibility="no"
        android:text="@string/add_face_button_text" />

</RelativeLayout>